fix: adjusts date height on mobile

--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -66,7 +66,7 @@
   .cc-form--input_group_control[type="date"] {
     display:block;
      -webkit-appearance: textfield;
-     min-height: 50px;
+     min-height: 45px;
   }
 
   .cc-form--input_group_control[type="date"]::-webkit-calendar-picker-indicator {
